--- a/README.rdoc
+++ b/README.rdoc
@@ -36,3 +36,7 @@ rails generate controller todo_items index -p
 #### create a features directory for todo_items
 mkdir -p spec/features/todo_items
 touch spec/features/todo_items/index_spec.rb
+
+#### to run test with different format
+rspec --format=documentation spec/features/todo_items/index_spec.rb
+
